[gd_scene load_steps=3 format=3 uid="uid://m35jtq8jrbbc"]

[ext_resource type="PackedScene" uid="uid://4dlygfeilxdg" path="res://ui/play_stage.tscn" id="1_ry8fm"]
[ext_resource type="Script" path="res://ui/play_menu.gd" id="1_xky2f"]

[node name="PlayMenu" type="Panel"]
custom_minimum_size = Vector2(600, 540)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -270.0
offset_right = 300.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xky2f")

[node name="Title" type="Label" parent="."]
custom_minimum_size = Vector2(0, 64)
layout_mode = 1
offset_left = 32.0
offset_top = 32.0
offset_right = 339.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 42
text = "Stage Selection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Return" type="Button" parent="."]
custom_minimum_size = Vector2(128, 64)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 99.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "Return"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -432.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 2

[node name="PlayStage_1" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_ry8fm")]
layout_mode = 2

[node name="PlayStage_2" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_ry8fm")]
layout_mode = 2

[node name="PlayStage_3" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_ry8fm")]
layout_mode = 2

[node name="PlayStage_4" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_ry8fm")]
layout_mode = 2

[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayStage_1" to="." method="_on_play_stage_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayStage_2" to="." method="_on_play_stage_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayStage_3" to="." method="_on_play_stage_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayStage_4" to="." method="_on_play_stage_4_pressed"]
